<resources>
    <string name="app_name">CloseT</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="closet">옷장</string>
    <string name="cody">코디</string>
    <string name="choice">선택</string>
    <string name="cloth_name">옷 이름</string>
    <string name="register_picture">사진 추가</string>
    <string name="category1">옷 종류</string>
    <string name="category2">디테일</string>
    <string name="color">색깔</string>
    <string name="style">스타일</string>
    <string name="register_cloth">등록하기</string>
    <string name="email_info">example@domain.com</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="sign_in_text">필수입력 사항</string>
    <string name="name_text">이름</string>
    <string name="id_text">아이디</string>
    <string name="id_input_hint">아이디 영어/숫자 조합</string>
    <string name="duplication_text">중복 확인</string>
    <string name="password_text">비밀번호</string>
    <string name="password_commit_text">비밀번호 확인</string>
    <string name="password_info">비밀번호 6자리 이상 영문/숫자 조합</string>
    <string name="submit">가입하기</string>
    <string name="email">이메일</string>
    <string name="select">이미지 선택</string>
    <string name="album">앨범선택</string>
    <string name="camera">사진촬영</string>
    <string name="cancel">취소</string>
    <string name="findId">아이디 찾기</string>
    <string name="findPassword">비밀번호 찾기</string>
    <string name="pants">하의</string>
    <string name="top">상의</string>
    <string name="outer">아우터</string>
    <string name="shoes">신발</string>
    <string name="favorite">즐겨찾기</string>
    <string name="check">확인</string>
    <string name="type">디테일</string>
    <string name="add_cloth">옷 추가</string>
    <string name="category_txt">옷 종류</string>
    <string name="detail_txt">디테일</string>
    <string name="color_txt">색깔</string>
    <string name="style_txt">스타일</string>
    <string name="reset_btn">초기화</string>
    <string name="done_btn">완료</string>
...
