<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/name_text"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/sign_up_edittext"
            android:hint="이름 입력" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:padding="10px">

        <TextView
            android:id="@+id/id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:text="@string/id_text"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/id_input"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:layout_below="@+id/id_text"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="110dp"
            android:background="@drawable/sign_up_edittext"
            android:hint="@string/id_input_hint" />

        <Button
            android:id="@+id/duplication_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="150dp"
            android:text="@string/duplication_text"
            android:background="@drawable/sign_up_btn"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-3dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/password_text"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/sign_up_edittext"
            android:hint="@string/password_info" />

        <EditText
            android:id="@+id/password_commit_input"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/sign_up_edittext"
            android:hint="@string/password_commit_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/sign_up_edittext"
            android:hint="@string/email_info" />
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:padding="3dip"
        android:background="@drawable/sign_up_btn"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/submit" />

</LinearLayout>