<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cody_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_top"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:layout_marginLeft="7dp"
                android:text="@string/top"
                />
            <Button
...


    </LinearLayout>


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="100dp"
        >

        <LinearLayout
            android:visibility="invisible"
            android:id="@+id/page_top"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <LinearLayout
...
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/type"
                    />
                <Spinner
                    android:id="@+id/spinner_type_top"
                    android:layout_marginLeft="50dp"
                    android:layout_width="200dp"
                    android:layout_height="25dp"
                    />
            </LinearLayout>

...
                    android:layout_height="25dp"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/check_top"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="150dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/check"
                />
...
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="450dp"
            >

            <LinearLayout
                android:id="@+id/codyImg_layout"
                android:layout_width="match_parent"
                android:layout_height="450dp">

                <GridView
                    android:id="@+id/cloth_grid"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:layout_marginTop="50dp"
                    android:columnWidth="100dp"
                    android:horizontalSpacing="10dp"
                    android:numColumns="auto_fit"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="150dp"
        >

        <Button
            android:id="@+id/btn_register_cloth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_cloth"
            />

    </LinearLayout>
...
