...
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                >

                <Button
                    android:id="@+id/information_favorite_register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="등록"
                    />
                <Button
                    android:id="@+id/information_favorite_release_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="해제"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/information_close_btn"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="닫기"
                />


        </LinearLayout>

    </ScrollView>
...
